# Agent

./: .env.example  .gitignore  README.md  example_usage.py  main.py  main.py_new_usage.py  pyproject.toml  requirements.txt
configs/: config.yaml
frontend/: index.html  index.html_new_usage.html  index.html_usage_new.html
frontend/static/css/: style.css  style.css_new_balance.css  style.css_part1.css
frontend/static/js/: app.js
src/: __init__.py
src/agent/: __init__.py  core.py  planner.py
src/llm/: __init__.py  prompts.py  provider.py
src/memory/: __init__.py  long_term.py  short_term.py  working_memory.py
src/tools/: __init__.py  base.py  calculator.py  code_executor.py  file_manager.py  web_search.py
src/utils/: __init__.py  config.py  logger.py
tests/: conftest.py  test_agent.py  test_memory.py  test_tools.py
